--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
-  <html>
+  <html>  </html>
     <head>
-    
     </head>
     <body>
     </body>
-  </html>
+  
