--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
   <html lang = "en">
-    <head>
-    </head>
+    <head></head>
     <body>
     </body>
   </html>
