--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
   <html lang = "en">
-    <head>title</head>
+    <head>"title"</head>
     <body>
     </body>
   </html>
