--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
   <html lang = "en">
     <head>
-      <title></title>
+      <title>skjn</title>
     </head>
     <body>
     </body>
