--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <html lang="en">
     <head>
       <title>title</title>
-      <link></link>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
     </head>
     <body>
     </body>
